--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -26,9 +26,11 @@
             flex: 0 0 110px;
             overflow: hidden;
             /*border-bottom: 1px solid #eee;*/
-            box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.15);
             z-index: 2;
-            background-color: whitesmoke;
+        }
+
+        .el-header{
+            padding: 0;
         }
 
         header > #logo-text {
@@ -38,13 +40,13 @@
         }
 
         #logo-text > img {
-            position: absolute;
+            position: fixed;
             top: 32px;
             left: 56px;
         }
 
         #logo-text > span {
-            position: absolute;
+            position: fixed;
             top: 45px;
             left: 134px;
             font-size: 28px;
@@ -52,19 +54,25 @@
             color: #508eca;
         }
 
-        .el-header{
-            display: flex;
+        #header-bg{
+            position:fixed;
+            width:100%;
+            height: 110px;
+            margin:0;
+            padding:0;
+            background-color: #f5f5f5;
         }
-
     </style>
 </head>
 <body>
 <div id="app">
     <el-container>
-        <el-header>
-            <div id="logo-text">
-                <img src="res/icon-box.png">
-                <span>后勤物资多维度调配系统</span>
+        <el-header class="header">
+            <div id="header-bg">
+                <div id="logo-text">
+                    <img src="res/icon-box.png">
+                    <span>后勤物资多维度调配系统</span>
+                </div>
             </div>
         </el-header>
         <el-main>
@@ -305,20 +313,7 @@
             nextStep: function (formName) {
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
-                        if (this.form1.warehouseId) {
-                            post('/system/get_warehouse', {
-                                pageNum: 1,
-                                warehouse_id: app.form1.warehouseId
-                            }, (data, err) => {
-                                if (!data) {
-                                    app.$alert("仓库不存在");
-                                } else {
-                                    app.state = 1;
-                                }
-                            });
-                        } else {
-                            app.state = 1;
-                        }
+                        app.state = 1;
                     } else {
                         this.$alert("信息错误，请重新填写。");
                         return false;
