--- a/BR-MS/入库.html
+++ b/BR-MS/入库.html
@@ -41,13 +41,21 @@
                 <el-table-column prop="rukushijian" label="入库时间"></el-table-column>
                 <el-table-column prop="gongyingshang" label="供应商"></el-table-column>
                 <el-table-column prop="xiangxixinxi" label="详细信息" width="80">
+                    <!--点击查看当前物资详细信息-->
                     <template slot-scope="scope">
-                        <el-button size="mini"style="background-color: #ececec">查看</el-button>
+                        <el-button size="mini"style="background-color: #ececec" @click="dialogVisible=true">查看</el-button>
+                        <el-dialog title="货品详细信息" :visible.sync="dialogVisible" width="50%" :before-close="handleClose">
+                            <span>这里应该是所选货品的详细信息</span>
+                            <span slot="footer" class="dialog-footer">
+                                <el-button @click="dialogVisible = false" size="mini" style="background-color: #ececec">关闭</el-button>
+                            </span>
+                        </el-dialog>
                     </template>
                 </el-table-column>
                 <el-table-column prop="zerenren" label="责任人"></el-table-column>
                 <el-table-column prop="lianxidianhua" label="联系电话"></el-table-column>
                 <el-table-column prop="ruku" label="">
+                    <!--点击入库 复制转移所有当前货品编号至 inResult-->
                     <template slot-scope="scope">
                         <el-button size="mini" style="background-color: #ececec">入库</el-button>
                     </template>
@@ -55,11 +63,11 @@
             </el-table>
         </el-form>
         <hr>
-        <!--出库业务-->
+        <!--入库业务-->
         <el-form :model="inGoing">
             <el-form :inline="true">
-                <el-form-item label="操作员：" size="mini"><el-input v-model="inGoing.caozuoyuan"></el-input></el-form-item>
-                <el-form-item label="仓库：" size="mini"><el-input v-model="inGoing.cangku"></el-input></el-form-item>
+                <el-form-item label="操作员：" size="mini"><el-input v-model="inGoing.caozuoyuan" :disabled="true"></el-input></el-form-item>
+                <el-form-item label="仓库：" size="mini"><el-input v-model="inGoing.cangku" :disabled="true"></el-input></el-form-item>
             </el-form>
             <el-form :inline="true">
                 <el-form-item label="建单人：" size="mini"><el-input v-model="inGoing.jiandanren"></el-input></el-form-item>
@@ -73,6 +81,7 @@
                     </el-select>
                 </el-form-item>
             </el-form>
+            <!--点击上传文件-->
             <el-form :inline="true">
                 <el-form-item label="入库单上传：" size="mini" :inline="true">
                     <el-upload action="https://jsonplaceholder.typicode.com/posts/" :on-preview="handlePreview" :on-remove="handleRemove" :before-remove="beforeRemove" multiple :limit="3" :on-exceed="handleExceed" :file-list="fileList">
@@ -86,15 +95,15 @@
                 <el-table-column prop="huopinbianhao" label="货品编号"></el-table-column>
                 <el-table-column prop="huopinmingcheng" label="货品名称"></el-table-column>
                 <el-table-column prop="danwei" label="单位"></el-table-column>
-                <!--可编辑项 begin-->
+                <!--可编辑项 begin  *与出库不同——删 去向 项-->
                 <el-table-column prop="rukushiliang" label="入库数量" width="75"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
                 <el-table-column prop="rukushijian" label="入库时间" width="80"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
-                <el-table-column prop="quxiang" label="去向"><template slot-scope="scope"><el-input size="mini"></el-input></template></el-table-column>
                 <!--可编辑项 end-->
                 <el-table-column prop="zerenren" label="责任人"></el-table-column>
                 <el-table-column prop="lianxidianhua" label="联系电话"></el-table-column>
                 <el-table-column prop="beizhu" label="备注"></el-table-column>
                 <el-table-column prop="shanchu" label="">
+                    <!--点击删除当前已选中货品-->
                     <template slot-scope="scope">
                         <el-button size="mini" style="background-color: #ececec">删除</el-button>
                     </template>
@@ -104,6 +113,7 @@
             <el-form>
                 <el-form-item size="medium">
                     <el-button style="background-color: #ececec">保存</el-button>
+                    <!--点击调用打印机 打印inResult表格清单-->
                     <el-button style="background-color: #ececec">生成货品清单</el-button>
                 </el-form-item>
             </el-form>
@@ -136,7 +146,7 @@
                     lianxidianhua: '',
                     ruku:''
                 }],
-                inGoing:{/* 出库业务 —— 相关信息填写 */
+                inGoing:{/* 入库业务 —— 相关信息填写 */
                     cangku:'',
                     caozuoyuan:'',
                     rukudanhao:'',
@@ -145,22 +155,21 @@
                     jiandanriqi:'',
                     rukuleibie:''
                 },
-                inResult:[{/* 出库业务 —— 信息结果表格 */
+                inResult:[{/* 入库业务 —— 信息结果表格 */
                     huopinbianhao:'',
                     huopinmingcheng:'',
                     danwei:'',
                     rukushuliang:'',
                     rukushijian:'',
-                    quxiang:'',
                     zerenren:'',
                     lianxidianhua:'',
                     beizhu:''
                 }],
-                fileList: [{/* 出库业务 —— 出库单上传 */
-                    name: '',
+                fileList: [{/* 入库业务 —— 入库单上传 */
+                    name: '默认文件',
                     url: ''
-                }]
-
+                }],
+                dialogVisible: false  /*查看当前货品详细信息 查看 button*/
             }
         },
         methods: {
@@ -178,6 +187,7 @@
                 return this.$confirm(`确定移除 ${ file.name }？`);
             }
             /*入库单上传相关函数 end*/
+
         }
     });
 </script>
