--- a/BR-MS/出库.html
+++ b/BR-MS/出库.html
@@ -14,55 +14,6 @@
 <div id="app">
     <el-form>
         <hr>
-        <!--查找-->
-        <el-form :model="queryCondition">
-            <el-form :inline="true">
-                <el-form-item label="货品名称：" size="mini"><el-input v-model="queryCondition.huopinmingcheng"></el-input></el-form-item>
-                <el-form-item label="供应商：" size="mini">
-                    <el-select v-model="queryCondition.gongyingshang">
-                        <el-option label="一" value="TB"></el-option>
-                        <el-option label="二" value="JD"></el-option></el-select>
-                </el-form-item>
-            </el-form>
-            <el-form :inline="true">
-                <el-form-item label="货品编号：" size="mini"><el-input v-model="queryCondition.number"></el-input></el-form-item>
-                <el-form-item label="货品类别：" size="mini">
-                    <el-select v-model="queryCondition.type">
-                    <el-option label="一" value="type1"></el-option>
-                    <el-option label="二" value="type2"></el-option></el-select>
-                </el-form-item>
-            </el-form>
-            <el-form><el-form-item size="mini"><el-button style="background-color: #ececec">查找</el-button></el-form-item></el-form>
-            <hr style="height:1px; border:none; border-top:1px dashed #c0c4cc">
-            <el-table :data="queryResult" size="mini" max-height="250">
-                <el-table-column type="index" width="50" label="序号"></el-table-column>
-                <el-table-column prop="huopinbianhao" label="货品编号"></el-table-column>
-                <el-table-column prop="huopinmingcheng" label="货品名称"></el-table-column>
-                <el-table-column prop="rukushijian" label="入库时间"></el-table-column>
-                <el-table-column prop="gongyingshang" label="供应商"></el-table-column>
-                <el-table-column prop="xiangxixinxi" label="详细信息" width="80">
-                    <!--点击查看当前物资详细信息-->
-                    <template slot-scope="scope">
-                        <el-button size="mini"style="background-color: #ececec" @click="dialogVisible=true">查看</el-button>
-                        <el-dialog title="货品详细信息" :visible.sync="dialogVisible" width="50%" :before-close="handleClose">
-                            <span>这里应该是所选货品的详细信息</span>
-                            <span slot="footer" class="dialog-footer">
-                                <el-button @click="dialogVisible = false" size="mini" style="background-color: #ececec">关闭</el-button>
-                            </span>
-                        </el-dialog>
-                    </template>
-                </el-table-column>
-                <el-table-column prop="zerenren" label="责任人"></el-table-column>
-                <el-table-column prop="lianxidianhua" label="联系电话"></el-table-column>
-                <el-table-column prop="chuku" label="">
-                    <!--点击出库 复制转移所有当前货品编号至 outResult-->
-                    <template slot-scope="scope">
-                        <el-button size="mini" style="background-color: #ececec">出库</el-button>
-                    </template>
-                </el-table-column>
-            </el-table>
-        </el-form>
-        <hr>
         <!--出库业务-->
         <el-form :model="outGoing">
             <el-form :inline="true">
@@ -82,13 +33,13 @@
                 </el-form-item>
             </el-form>
             <!--点击上传文件-->
-            <el-form :inline="true">
+            <!--<el-form :inline="true">
                 <el-form-item label="出库单上传：" size="mini" :inline="true">
                     <el-upload action="https://jsonplaceholder.typicode.com/posts/" :on-preview="handlePreview" :on-remove="handleRemove" :before-remove="beforeRemove" multiple :limit="3" :on-exceed="handleExceed" :file-list="fileList">
                         <el-button size="mini" type="primary">点击上传</el-button>
                     </el-upload>
                 </el-form-item>
-            </el-form>
+            </el-form>-->
             <hr style="height:1px; border:none; border-top:1px dashed #c0c4cc">
             <el-table :data="outResult" size="mini" max-height="250">
                 <el-table-column type="index" width="44" label="序号"></el-table-column>
@@ -106,7 +57,7 @@
                 <el-table-column prop="shanchu" label="">
                     <!--点击删除当前已选中货品-->
                     <template slot-scope="scope">
-                        <el-button size="mini" style="background-color: #ececec">删除</el-button>
+                        <el-button size="mini" style="background-color: #ececec" @click.native.prevent="deleteRow(scope.$index,outResult)">删除</el-button>
                     </template>
                 </el-table-column>
             </el-table>
@@ -119,6 +70,54 @@
                 </el-form-item>
             </el-form>
             <hr>
+            <!--查找-->
+            <el-form :model="queryCondition">
+                <el-form :inline="true">
+                    <el-form-item label="货品名称：" size="mini"><el-input v-model="queryCondition.huopinmingcheng"></el-input></el-form-item>
+                    <el-form-item label="供应商：" size="mini">
+                        <el-select v-model="queryCondition.gongyingshang">
+                            <el-option label="一" value="TB"></el-option>
+                            <el-option label="二" value="JD"></el-option></el-select>
+                    </el-form-item>
+                </el-form>
+                <el-form :inline="true">
+                    <el-form-item label="货品编号：" size="mini"><el-input v-model="queryCondition.number"></el-input></el-form-item>
+                    <el-form-item label="货品类别：" size="mini">
+                        <el-select v-model="queryCondition.type">
+                            <el-option label="一" value="type1"></el-option>
+                            <el-option label="二" value="type2"></el-option></el-select>
+                    </el-form-item>
+                </el-form>
+                <el-form><el-form-item size="mini"><el-button style="background-color: #ececec">查找</el-button></el-form-item></el-form>
+                <hr style="height:1px; border:none; border-top:1px dashed #c0c4cc">
+                <el-table :data="queryResult" size="mini" max-height="250">
+                    <el-table-column type="index" width="50" label="序号"></el-table-column>
+                    <el-table-column prop="huopinbianhao" label="货品编号"></el-table-column>
+                    <el-table-column prop="huopinmingcheng" label="货品名称"></el-table-column>
+                    <el-table-column prop="rukushijian" label="入库时间"></el-table-column>
+                    <el-table-column prop="gongyingshang" label="供应商"></el-table-column>
+                    <el-table-column prop="xiangxixinxi" label="详细信息" width="80">
+                        <!--点击查看当前物资详细信息-->
+                        <template slot-scope="scope">
+                            <el-button size="mini"style="background-color: #ececec" @click="dialogVisible=true">查看</el-button>
+                            <el-dialog title="货品详细信息" :visible.sync="dialogVisible" width="50%" :before-close="handleClose">
+                                <span>这里应该是所选货品的详细信息</span>
+                                <span slot="footer" class="dialog-footer">
+                                <el-button @click="dialogVisible = false" size="mini" style="background-color: #ececec">关闭</el-button>
+                            </span>
+                            </el-dialog>
+                        </template>
+                    </el-table-column>
+                    <el-table-column prop="zerenren" label="责任人"></el-table-column>
+                    <el-table-column prop="lianxidianhua" label="联系电话"></el-table-column>
+                    <el-table-column prop="chuku" label="">
+                        <!--点击出库 复制转移所有当前货品编号至 outResult-->
+                        <template slot-scope="scope">
+                            <el-button size="mini" style="background-color: #ececec">出库</el-button>
+                        </template>
+                    </el-table-column>
+                </el-table>
+            </el-form>
         </el-form>
     </el-form>
 </div>
@@ -188,8 +187,13 @@
             },
             beforeRemove(file, fileList) {
                 return this.$confirm(`确定移除 ${ file.name }？`);
-            }
+            },
             /*出库单上传相关函数 end*/
+
+            /*表格内 删除 按钮  begin*/
+            deleteRow(index, rows) {
+                rows.splice(index, 1);
+            }
         }
     });
 </script>
