--- a/BR-MS/resRegister.html
+++ b/BR-MS/resRegister.html
@@ -86,7 +86,7 @@
                     <el-form-item label="入库单号">
                         <el-input v-model="importInfo.inboundNum" size="medium"></el-input>
                     </el-form-item>
-                    <el-form-item label="入库单上传">
+                    <el-form-item label="入库单上传" style="display: none">
                         <el-upload action="#">
                             <el-button type="primary" size="medium">点击上传</el-button>
                         </el-upload>
